--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,9 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
-    }
+  "@/*": ["./app/*", "./lib/*"],
+  "@app/*": ["./app/*"]
+}
   },
   "include": [
     "next-env.d.ts",
