--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-  "@/*": ["./app/*", "./lib/*"],
-  "@app/*": ["./app/*"]
+  "@/*": ["./app/*"]
 }
   },
   "include": [
